--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -26,9 +26,39 @@ collections:
       - {
           name: "date",
           label: "Date",
-          widget: "dateformat",
+          widget: "datetime",
+          default: "{{now}}",
           date_format: "YYYY-MM-DD",
           time_format: false,
         }
-      - { name: "thumbnail", label: "Featured Image", widget: "image" }
+      - {
+          name: "thumbnail",
+          label: "Featured Image",
+          widget: "image",
+          required: false,
+        }
+      - { name: "body", label: "Body", widget: "markdown" }
+
+  - name: "events" # Name of the collection
+    label: "Events" # Label for the admin UI
+    folder: "/public/content/events" # Folder where posts are stored
+    create: true # Allow new posts to be created
+    slug: "{{slug}}" # Post slug format
+    fields: # The fields for each document, usually in front matter
+      - { name: "layout", label: "Layout", widget: "hidden", default: "events" }
+      - { name: "title", label: "Title", widget: "string" }
+      - {
+          name: "date",
+          label: "Date",
+          widget: "datetime",
+          default: "{{now}}",
+          date_format: "YYYY-MM-DD",
+          time_format: "HH:mm",
+        }
+      - {
+          name: "thumbnail",
+          label: "Featured Image",
+          widget: "image",
+          required: false,
+        }
       - { name: "body", label: "Body", widget: "markdown" }
